--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     // Fragment navigation-related dependencies
-    def navigation_version = "2.2.0"
+    def navigation_version = "2.2.1"
     implementation "androidx.navigation:navigation-fragment:$navigation_version"
     implementation "androidx.navigation:navigation-ui:$navigation_version"
 
@@ -45,14 +45,12 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
 
     // ReactiveX-related dependencies
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.17'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
     // Room- and SQLite-related dependencies
-    def room_version = "2.2.3"
+    def room_version = "2.2.4"
     implementation "androidx.room:room-runtime:$room_version"
-    implementation 'androidx.navigation:navigation-fragment:2.2.0'
-    implementation 'androidx.navigation:navigation-ui:2.2.0'
     annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-rxjava2:$room_version"
 
@@ -68,6 +66,20 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
+
+    // Library required for search
+    def tomtom_version = "2.4405"
+    implementation "com.tomtom.online:sdk-search:$tomtom_version"
+    // Library required for mapping
+    implementation "com.tomtom.online:sdk-maps:$tomtom_version"
+    // Library for alternate routing
+    implementation "com.tomtom.online:sdk-routing:$tomtom_version"
+    //extention library for map custom style and ui support
+    implementation("com.tomtom.online:sdk-maps-ui-extensions:$tomtom_version")
+    //extention library for rx-java2
+    implementation("com.tomtom.online:sdk-maps-rx-extensions:$tomtom_version")
+    //extention library for displaying static map
+    implementation("com.tomtom.online:sdk-maps-static-image:$tomtom_version")
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
