--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,16 @@
 
     </activity>
 
+
+
+    <meta-data
+      android:name="OnlineSearch.Key"
+      android:value="undefined" />
+    <meta-data android:name="OnlineMaps.Key"
+      android:value="undefined" />
+    <meta-data android:name="OnlineRouting.Key"
+      android:value="undefined" />
+
   </application>
 
 </manifest>
