Need to find the OnlineMap request method location.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,12 @@
 
 
 
+
+    <meta-data
+      android:name="OnlineSearch.Key"
+      android:value="your-tomtom-key" />
+
+
   </application>
 
 </manifest>
