--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,16 @@
 apply plugin: 'com.android.application'
 
 
-def getProperty (String propertyFile, String propertyName) {
+def static getProperty (String propertyFile, String propertyName) {
     Properties properties = new Properties();
     properties.load(new FileInputStream(propertyFile));
     return String.format("\"%s\"", properties.getProperty(propertyName));
+}
+
+def static getUnquotedProperty (String propertyFile, String propertyName) {
+    Properties properties = new Properties();
+    properties.load(new FileInputStream(propertyFile));
+    return properties.getProperty(propertyName);
 }
 
 android {
@@ -19,6 +25,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         buildConfigField "String", "API_KEY",
                 getProperty("$projectDir/../../../services/tomtom.properties", "api_key")
+        resValue "string", "tomtom_api_key", getUnquotedProperty("$projectDir/../../../services/tomtom.properties", "api_key")
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
