--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
 
     <meta-data
       android:name="OnlineMaps.Key"
-      android:value="your-tomtom-key" />
+      android:value="@string/tomtom_api_key" />
 
 
 
